syntax = "proto3";

option csharp_namespace = "SetRemoteService";

service Setter {
  rpc SetState (SetRequest) returns (SetReply);
  rpc GetStatus (GetSetterStatusRequest) returns (SetReply);
}

message SetRequest {
  string ip = 1;
  bool state = 2;
}

message SetReply {
  bool ok = 1;
}

message GetSetterStatusRequest {
}